--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 BOT_TOKEN=6394921718:AAEAyk1WEOqfRFU6A8fdVoEOhWa2R0sRQxg
 ADMIN_USER_ID=6343801713
-DB_URL="mongodb://AdminMacFi:i6MC!Jmb@GeQ*Fyf_HQP:127.0.0.1:27017/"
+DB_URL=mongodb://AdminMacFi:i6MC!Jmb@GeQ*Fyf_HQP:127.0.0.1:27017/
