--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 BOT_TOKEN=7057312518:AAGWh8O69rxNtXfZFUYzWbJjnYUeLe0ezns
 ADMIN_USER_ID=6343801713
-DB_URL=mongodb://AdminMacFi:i6MC!Jmb%40GeQ*Fyf_HQP@127.0.0.1:27017/
+DB_URL=mongodb://AdminMacFi:i6MC!Jmb%40GeQ*Fyf_HQP@127.0.0.1:27017
